fix(editor): Fix issues in dark mode (#9068)

--- a/packages/design-system/src/css/_tokens.scss
+++ b/packages/design-system/src/css/_tokens.scss
@@ -267,6 +267,9 @@
 	// Input Triple
 	--color-background-input-triple: var(--color-background-light);
 
+	// Node error
+	--color-node-error-output-text-color: var(--color-danger);
+
 	// Various
 	--color-avatar-accent-1: var(--prim-gray-120);
 	--color-avatar-accent-2: var(--prim-color-alt-e-shade-100);
